@@ -1,7 +1,7 @@
 		</td></tr>
 		<tr>
-			<td bgcolor="#ffffff" align="center"><font color="#555555"><?php do_links()?></font>
-			<br><div align="center"><font size="-1" color="#555555">Material &copy; Nangband Developers. Contact <a href="mailto:nevermiah@hotmail.com">nevermiah@hotmail.com</a>
+			<td bgcolor="#ffffff" align="center">
+			<div align="center"><font size="-1" color="#555555">Material &copy; Nangband Developers. Contact <a href="mailto:nevermiah@hotmail.com">nevermiah@hotmail.com</a>
 			<br><a href="http://jigsaw.w3.org/css-validator/check/referer">CSS 2.0 Compliant</a> | <a href="http://validator.w3.org/check/referer">HTML 4.01 Compliant</a></font>
 			</div>
 		</td></tr>
