@@ -6,6 +6,6 @@
 			<font size="+2"><b>nangband - <?=$title?></b></font>
 		</td></tr><tr><td bgcolor="#ffffff" align="center">
 			<?php do_links(true); ?><br>
-			<font size="-1">change style: <?php do_styles(true, true);?></font>
+			<font size="-1">change style: <?php do_styles(true);?></font>
 		</td></tr>
 		<tr><td bgcolor="#eeeeee" class="border">
